--- a/app/src/main/res/layout/list_rush_events.xml
+++ b/app/src/main/res/layout/list_rush_events.xml
@@ -18,9 +18,7 @@
     android:layout_height="match_parent"
     android:padding="3dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="?android:selectableItemBackground"
-
-    >
+    android:background="?android:selectableItemBackground">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
