--- a/app/src/main/res/layout/list_information_videos.xml
+++ b/app/src/main/res/layout/list_information_videos.xml
@@ -24,7 +24,7 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:scaleType="fitXY"
-            android:id="@+id/list_info_event_name"
+            android:id="@+id/list_information_video_videoImage"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"/>
 
@@ -32,8 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_toRightOf="@+id/list_info_event_name"
-            android:layout_toEndOf="@+id/list_info_event_name">
+            android:id="@+id/list_information_video_textViews"
+            android:layout_toRightOf="@+id/list_information_video_videoImage"
+            android:layout_toEndOf="@+id/list_information_video_videoImage">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -45,16 +46,24 @@
 
             <TextView
                 android:layout_width="wrap_content"
+                android:textSize="11sp"
                 android:layout_height="wrap_content"
                 android:text="@string/test_string"
                 android:layout_marginTop="5dp"
                 android:id="@+id/list_informational_video_videoDescription"
                 />
 
-
-
         </LinearLayout>
 
+
+        <ImageView
+            android:layout_alignParentRight="true"
+            android:background="@drawable/square_background"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:src="@mipmap/camer_icon"
+            android:id="@+id/list_information_video_icon"
+            />
 
 
 
