--- a/app/src/main/res/drawable/square_background2.xml
+++ b/app/src/main/res/drawable/square_background2.xml
@@ -13,7 +13,7 @@
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
-            <solid android:color="#BBDEF8" />
+            <solid android:color="@color/button_color" />
             <corners android:bottomRightRadius="8dp"
                 android:bottomLeftRadius="8dp"
                 android:topRightRadius="8dp"
