--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/gray</item>
+        <item name="colorPrimary">@color/silver_primary</item>
+        <item name="colorPrimaryDark">@color/silver_secondary</item>
+        <item name="colorAccent">@color/silver_accent</item>
+    </style>
 
-        <item name="android:windowActionModeOverlay">true</item>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
 
@@ -21,7 +26,6 @@
     <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
-
         <item name="android:windowMinWidthMajor">97%</item>
         <item name="android:windowMinWidthMinor">97%</item>
 
@@ -34,8 +38,6 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowMinWidthMajor">90%</item>
         <item name="android:windowMinWidthMinor">90%</item>
-
-
     </style>
 
 </resources>
