[Just need to sort out the data and make the final activity]

--- a/app/src/main/res/layout/fragment_rush.xml
+++ b/app/src/main/res/layout/fragment_rush.xml
@@ -11,10 +11,10 @@
 
 
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment__rush_list_view"/>
+        android:id="@+id/fragment__rush_recycled_view_view"/>
 
 
 </FrameLayout>
