--- a/app/src/main/res/layout/list_information_cards.xml
+++ b/app/src/main/res/layout/list_information_cards.xml
@@ -2,65 +2,72 @@
 
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="380dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     app:cardCornerRadius="2dp"
     android:layout_gravity="center"
     app:cardElevation="2dp"
     app:contentPadding="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="3dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="?android:selectableItemBackground">
+        android:layout_height="match_parent">
 
+
+        <RelativeLayout
+            android:id="@+id/list_information_cards_imageLaout"
+            android:layout_width="match_parent"
+            android:layout_height="250dp">
         <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:scaleType="fitXY"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
             android:id="@+id/list_information_video_videoImage"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"/>
+            android:layout_alignParentTop="true" />
 
-        <LinearLayout
+        <ProgressBar
+            android:id="@+id/list_information_cards_progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/list_information_video_textViews"
-            android:layout_toRightOf="@+id/list_information_video_videoImage"
-            android:layout_toEndOf="@+id/list_information_video_videoImage">
+            android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"
                 android:text="@string/test_string"
                 android:id="@+id/list_informational_video_title_name"
-                />
+                android:layout_below="@+id/list_information_cards_imageLaout" />
 
 
             <TextView
                 android:layout_width="wrap_content"
-                android:textSize="11sp"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_below="@+id/list_informational_video_title_name"
                 android:layout_height="wrap_content"
                 android:text="@string/test_string"
-                android:layout_marginTop="5dp"
                 android:id="@+id/list_informational_video_videoDescription"
                 />
 
-        </LinearLayout>
 
 
         <ImageView
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/list_informational_video_videoDescription"
             android:background="@drawable/square_background2"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@mipmap/camer_icon"
             android:id="@+id/list_information_video_icon"
             />
