--- a/app/src/main/res/layout/activity_brother_pager.xml
+++ b/app/src/main/res/layout/activity_brother_pager.xml
@@ -4,7 +4,7 @@
 <android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_brother_viewPager"
-    android:layout_width="fill_parent"
-    android:layout_height="200dp">
+    android:layout_width="match_parent"
+    android:layout_height="350dp">
 </android.support.v4.view.ViewPager>
 
