--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:padding="4dip"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff"
+    >
 
 
     <android.support.design.widget.TabLayout
@@ -13,7 +15,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/activity_tab_layout"
         app:tabMode = "fixed"
-        app:tabGravity = "fill" />
+        app:tabGravity = "fill"
+        app:tabSelectedTextColor="#000"
+        />
 
 
 
