--- a/app/src/main/res/layout/fragment_event_photos.xml
+++ b/app/src/main/res/layout/fragment_event_photos.xml
@@ -2,14 +2,12 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:layout_gravity="center">
+    android:layout_width="match_parent"
+    android:layout_height="250dp">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
         android:id="@+id/fragment_event_photoView"
         />
 
