--- a/app/src/main/res/layout/list_rush_events.xml
+++ b/app/src/main/res/layout/list_rush_events.xml
@@ -19,7 +19,8 @@
     android:padding="3dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="?android:selectableItemBackground">
-        <LinearLayout
+
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/list_rush_events_name_type_layout">
@@ -41,24 +42,34 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:text="@string/test_string"
-                android:id="@+id/list_rush_events_type"
-                android:layout_marginRight="40dp"
-                android:layout_marginEnd="40dp"/>
+                android:id="@+id/list_rush_events_type"/>
 
 
 
         </LinearLayout>
 
 
-        <TextView
+
+    <View
         android:layout_below="@+id/list_rush_events_name_type_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/silver_accent"
+        android:id="@+id/list_rush_events_line1"
         android:layout_marginStart="10dp"
-        android:textSize="12sp"
-        android:text="@string/test_string"
-        android:id="@+id/list_rush_event_date"/>
+        android:layout_marginLeft="10dp"
+        />
+
+        <TextView
+            android:layout_below="@+id/list_rush_events_line1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:textSize="12sp"
+            android:text="@string/test_string"
+            android:id="@+id/list_rush_event_date"
+            />
 
         <TextView
             android:layout_below="@+id/list_rush_event_date"
@@ -68,7 +79,8 @@
             android:layout_marginStart="10dp"
             android:textSize="12sp"
             android:text="@string/test_string"
-            android:id="@+id/list_rush_event_time"/>
+            android:id="@+id/list_rush_event_time"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,7 +90,9 @@
             android:text="@string/test_string"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:id="@+id/list_rush_event_location" />
+            android:id="@+id/list_rush_event_location"
+
+            />
     </RelativeLayout>
 
 
