--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -88,6 +88,7 @@
             android:text="@string/test_string"
             android:textColor="#FFF"
             android:layout_gravity="center"
+            android:textIsSelectable="true"
             />
 
 
