--- a/app/src/main/res/layout/header_fragment_about_us.xml
+++ b/app/src/main/res/layout/header_fragment_about_us.xml
@@ -23,6 +23,16 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:textSize="12sp"
-        android:text="@string/about_tau_psi"/>
+        android:text="@string/about_tau_psi_intro"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:textSize="12sp"
+        android:text="@string/about_tau_psi_outro"/>
 
 </LinearLayout>
