--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         app:tabMode = "fixed"
         app:tabGravity = "fill"
         app:tabSelectedTextColor="#000"
+        app:tabIndicatorHeight="2dp"
         />
 
 
