--- a/app/src/main/res/layout/header_fragment_about_us.xml
+++ b/app/src/main/res/layout/header_fragment_about_us.xml
@@ -4,35 +4,64 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="false">
+    android:clickable="false"
+    android:layout_marginTop="5dp"
+    >
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="@string/about_us_header"
-        android:textSize="15sp"
-        android:textStyle="bold|"
+        android:background="@drawable/rounded_corner_background"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="2dp"
         android:layout_gravity="center"
-        />
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/about_us_header"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:layout_centerInParent="true"
+            />
+
+
+    </RelativeLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:textSize="12sp"
         android:text="@string/about_tau_psi_intro"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:textSize="12sp"
+        android:text="@string/about_tau_psi_middle"/>
+
+
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:textSize="12sp"
-        android:text="@string/about_tau_psi_outro"/>
+        android:layout_marginEnd="10dp"
+        android:text="@string/about_tau_psi_end"/>
 
 </LinearLayout>
