--- a/app/src/main/res/layout/simple_header.xml
+++ b/app/src/main/res/layout/simple_header.xml
@@ -1,50 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <LinearLayout
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="false"
+    android:layout_marginTop="5dp"
     >
 
+<RelativeLayout
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/rounded_corner_background"
+    android:layout_gravity="center"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginBottom="10dp"
+    >
 
-
-    <View
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/silver_accent"
-        android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginEnd="5dp"
-        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/social_media_follow"
         android:id="@+id/simple_header_textView"
-        android:layout_gravity="center"
-        android:textSize="15sp"
-        android:textStyle="bold|"
+        android:layout_centerInParent="true"
+        android:textColor="#000"
+        android:textStyle="bold"
         />
-
-
-
-    <View
-        android:layout_marginTop="3dp"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/silver_accent"
-        android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginEnd="5dp"
-        />
-
+</RelativeLayout>
 
 </LinearLayout>
