--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="silver_primary">#0D47A1</color>
+    <color name="blue_primary">#0D47A1</color>
     <color name="silver_secondary">#616161</color>
     <color name="silver_accent">#757575</color>
     <color name="button_color">#0D47A1</color>
     <color name="white">#fff</color>
-
-
-    <color name="card_informational_color">#33009688</color>
-    <color name="card_socaial_color">#33FFEB3B</color>
-
-
-
 
 </resources>
