--- a/app/src/main/res/layout/list_information_cards.xml
+++ b/app/src/main/res/layout/list_information_cards.xml
@@ -2,7 +2,7 @@
 
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="380dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     app:cardCornerRadius="2dp"
@@ -56,6 +56,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/test_string"
                 android:id="@+id/fragment_brother_details__whyJoined"
+                android:textSize="12sp"
+
                 />
 
 
